# macintosh-dev-template

./: .gitignore  CMakeLists.txt  README.md  main.c  resources.r
logging/: logging.c  logging.h
logging/mini-vmac/: ClipOut Macro.sit  ClipOut.h  libClipOut.s  libClipOut.sit
minivmac/: .gitignore  build.sh
minivmac/MacDev.app/Contents/: Info.plist
minivmac/MacDev.app/Contents/MacOS/: MacDev
minivmac/MacDev.app/Contents/_CodeSignature/: CodeResources
minivmac/setup/: WRXCDFLS.i
minivmac/src/: COMOSGLU.h  CONTROLM.h  INTLCHAR.h  OSGLUCCO.m  PROGMAIN.c
scripts/: check-and-reset-disk-image.sh  copy-to-staging.sh  display-output.py  run-app-in-minivmac.sh
